# libguillaume

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
headers/: connector.hpp  guillaume.hpp
sources/: connector.cpp  guillaume.cpp
tests/: connector.cpp  test_document.cpp
